--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
+      padding: 0 1rem; /* Tambahkan padding pada container untuk ruang ekstra di sisi kanan dan kiri */
     }
     input[type="file"] {
       padding: 0.5rem;
@@ -24,9 +25,7 @@
       color: white;
       border-radius: 0.25rem;
       transition: background-color 0.3s ease;
-    }
-    button:hover {
-      background-color: #1d4ed8;
+      width: 100%; /* Ubah lebar tombol menjadi 100% agar memenuhi kontainer */
     }
     footer {
       background-color: #f9fafb;
@@ -35,6 +34,9 @@
       font-size: 12px;
       margin-top: auto;
       width: 100%;
+      position: fixed;
+      bottom: 0; /* Tempelkan footer ke bawah halaman */
+      left: 0;
     }
   </style>
 </head>
