--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <footer>
     Hak Cipta Dilindungi Oleh MakeMeow Community |
-    <a href="/api-documentation.html">Api Documentation</a>
+    <a href="/docs.html">Api Documentation</a>
   </footer>
 
   <script>
