--- a/docs.html
+++ b/docs.html
@@ -35,11 +35,11 @@
     }
     footer {
       background-color: #f9fafb;
-      padding: 10px;
+      padding: 0.5rem;
       text-align: center;
       font-size: 12px;
-      margin-top: 20px;
-      border-top: 1px solid #ddd;
+      margin-top: auto;
+      width: 100%;
     }
 
     @media (max-width: 480px) {
