--- a/index.html
+++ b/index.html
@@ -74,18 +74,19 @@
     font-size: 2rem;
   }
   .upload-file {
-    width: calc(100% + 600px);
-    margin-left: -200px;
-    margin-right: -200px;
+    width: 100%;
+    max-width: 230px;
+    margin: 0 auto;
+    margin-bottom: 1rem;
   }
   .upload-file span {
-    margin-left: 300px;
-    margin-right: 300px;
+    display: block;
+    margin-top: 0.5rem;
   }
   button {
-    width: calc(100% + 600px);
-    margin-left: -300px;
-    margin-right: -300px;
+    width: 100%;
+    max-width: 230px;
+    margin: 0 auto;
   }
 }
   </style>
